# formal_lang_parser

./: CMakeLists.txt  README.md  build_proj
cmake/: CodeCoverage.cmake
parser/: CMakeLists.txt  parser.h
test/: CMakeLists.txt  test.cpp
